# lotus

./: .clang-tidy  .gitIgnore  CMakeLists.txt  CODE_OF_CONDUCT.md  CPPLINT.cfg  FAQ.md  LICENSE  README.md  contributors.md  how-to-contribute.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  c-cpp.yml  first-interaction-greetings.yml  greeting.yml  greetings.yml  linter-check.yml
SDL/: async.upri  filestream.upri  interface.ltsu  interface.upri  math.ltsu  math.upri  threads.ltsu  timeline.ltsu
config/: config.h
grammar/EBNF/: ebnf_function
resources/: config.h  diagnostics.h  node.h  token.h
sdl/: interface.ltsu
src/: main.cpp
src/analyzer/: semantic_analyzer.cpp  semantic_analyzer.h
src/diagnostics/: common.h  generator.h  lexer.h  optimizer.h  parser.h  preprocessor.h  semantic_analyzer.h
src/diagnostics/internal/: internal.h
src/generator/: casting.h  codegen.h  generator.cpp  generator.h  loopContext.h  scopeStack.h  typeSystem.h
src/generator/x86_64/: generator.cpp  generator.h
src/lexer/: lexer.cpp  lexer.h  lexer.l  token.h
src/optimizer/: optimizer.cpp
src/parser/: ast.h  parse.h  parser.cpp  parser.h  parser.y  wrappers.h
src/parser/ast/: node.h
src/preprocessor/: preprocessor.cpp  preprocessor.h
tests/: code.lts
tests/code/: arrays.lts  break_and_continue.lts  casting.lts  functions.lts  if_statements.lts  loops.lts  mut_keyword.lts  name_shadowing.lts  operators.lts  pointers.lts  variables.lts
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
tests/performance/: test_performance.cpp
